- changed correct answers settings to be hidden by default

--- a/muikku/src/main/webapp/resources/theme-muikku/sass/workspaces-materials-management.scss
+++ b/muikku/src/main/webapp/resources/theme-muikku/sass/workspaces-materials-management.scss
@@ -1047,7 +1047,6 @@ body.workspace-materials-management {
       }
       
       .workspace-materials-management-view-page-controls span.correct-answers-settings { /* Special case for assignment type link and correct answers */
-        display:none;
         height:25px;
         width:25px;
         padding:2px;
@@ -1056,10 +1055,21 @@ body.workspace-materials-management {
         border:1px solid #fff;
         position:relative;
         left:0;
-        top:-1px;
+        top:-4px;
         color:#fff;
         text-align:center;
         background:#bdc7cf;
+		
+		a.correct-answers {
+          margin:0;
+          position:relative;
+          left:0px;
+          font-size:16px;
+        }
+
+		&.hidden {
+		  display:none;
+		}
 
       }
     
@@ -1091,44 +1101,14 @@ body.workspace-materials-management {
 
       &[data-correct-answers="ALWAYS"] .workspace-materials-management-view-page-controls span.correct-answers-settings { /* Special case for assignment type link */
         background: $exerciseCorrectAnswersAlways;
-        display:inline-block;
-        
-        a.correct-answers {
-          margin:0;
-          position:relative;
-          top:-2px;
-          left:0px;
-          font-size:16px;
-        }
-      
       }
       
       &[data-correct-answers="NEVER"] .workspace-materials-management-view-page-controls span.correct-answers-settings { /* Special case for assignment type link */
         background: $exerciseCorrectAnswersNever;
-        display:inline-block;
-        
-        a.correct-answers {
-          margin:0;
-          position:relative;
-          top:-2px;
-          left:0px;
-          font-size:16px;
-        }
-        
       }
       
       &[data-correct-answers="ON_REQUEST"] .workspace-materials-management-view-page-controls span.correct-answers-settings { /* Special case for assignment type link */
         background: $exerciseCorrectAnswersOnRequest;
-        display:inline-block;
-        
-        a.correct-answers {
-          margin:0;
-          position:relative;
-          top:-2px;
-          left:0px;
-          font-size:16px;
-        }
-      
       }
       
       .workspace-materials-management-view-page-controls {
